stave-macros/tests/fail/methods_requires_duplicate.stderr
error: `name` is listed twice in `requires`
  --> tests/fail/methods_requires_duplicate.rs:11:22
   |
11 |     #[requires(name, name)]
   |                      ^^^^
